[package]
authors = ["Carter Reeb <carter2k4@pm.me>"]
edition = "2018"
name = "rpnc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
once_cell = "1.7.2"
termion = "1.5.6"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size.
panic = 'abort'
