[package]
authors = ["Carter Reeb <carter2k4@pm.me>"]
edition = "2018"
name = "rpnc"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.7"
regex = "1.4"
termion = "1.5"

[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size.
panic = 'abort'
